--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  image_picker: ^0.6.7+17
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
