--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dev_dependencies:
     sdk: flutter
 
   image_picker: ^0.6.7+17
+  firebase_core: ^0.5.3
+  firebase_analytics: ^6.3.0
+  firebase_auth: ^0.18.4+1
+  firebase_storage: ^5.2.0
+  cloud_firestore: ^0.14.4
+  provider: ^4.3.2+3
+  timeago: ^2.0.29
+  flutter_spinkit: ^4.1.2+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
